fixed a mess with /users paths
