# backend/src/modules/users/users.controller.ts
@@ -8,6 +8,7 @@ import {
 	UseGuards,
 	Request,
 	Param,
+	Head,
 } from "@nestjs/common";
 import { UserListeningStatsDto, UsersService } from "./users.service";
 import {
@@ -20,6 +21,7 @@ import {
 	ApiSecurity,
 	ApiTags,
 	ApiUnauthorizedResponse,
+	ApiNotFoundResponse,
 } from "@nestjs/swagger";
 import { UserDto } from "./dto/user.dto";
 import { RoomDto } from "../rooms/dto/room.dto";
@@ -308,35 +310,6 @@ export class UsersController {
 		description: "Bearer token for authentication",
 	})
 	*/
-	@Get(":username/rooms/recent")
-	@ApiOperation({
-		summary: "Get a user's recent rooms",
-		description: "Get the user's most recently visited rooms.",
-		operationId: "getRecentRoomsByUsername",
-	})
-	@ApiOkResponse({
-		description: "The user's recent rooms as an array of RoomDto.",
-		type: RoomDto,
-		isArray: true,
-	})
-	@ApiBadRequestResponse({
-		description: "Username does not exist or is invalid.",
-	})
-	async getRecentRoomsByUsername(
-		@Param("username") username: string,
-	): Promise<RoomDto[]> {
-		return await this.usersService.getRecentRoomByUsername(username);
-	}
-
-	@ApiBearerAuth()
-	@ApiSecurity("bearer")
-	@UseGuards(JwtAuthGuard)
-	/*
-	@ApiHeader({
-		name: "Authorization",
-		description: "Bearer token for authentication",
-	})
-	*/
 	@Get("rooms/foryou")
 	@ApiOperation({
 		summary: "Get a user's recommended rooms",
@@ -375,6 +348,26 @@ export class UsersController {
 	async getCurrentRoom(@Request() req: Request): Promise<RoomDto> {
 		const userInfo: JWTPayload = this.auth.getUserInfo(req);
 		return await this.usersService.getCurrentRoomDto(userInfo.id);
+	}
+
+	@ApiBearerAuth()
+	@UseGuards(JwtAuthGuard)
+	@ApiSecurity("bearer")
+	@Get("foryou")
+	@ApiOperation({ summary: "Get recommended users" })
+	@ApiOkResponse({
+		description: "Recommended users retrieved successfully",
+		type: UserDto,
+		isArray: true,
+	})
+	@ApiUnauthorizedResponse({
+		description: "Unauthorized",
+	})
+	@ApiTags("users")
+	async getRecommendedUsers(@Request() req: Request): Promise<UserDto[]> {
+		console.log("called /users/foryou");
+		const userInfo: JWTPayload = this.auth.getUserInfo(req);
+		return await this.usersService.getRecommendedUsers(userInfo.id);
 	}
 
 	@ApiBearerAuth()
@@ -567,37 +560,32 @@ export class UsersController {
 		return await this.usersService.getBookmarksById(userInfo.id);
 	}
 
-	@Get(":username/bookmarks")
-	@ApiOperation({
-		summary: "Get the authorized user's bookmarks",
-		description: "Get all of the rooms that the user has bookmarked.",
-		operationId: "getBookmarksByUsername",
-	})
-	@ApiOkResponse({
-		description: "The user's bookmarks as an array of RoomDto.",
-		type: RoomDto,
-		isArray: true,
-	})
-	@ApiBadRequestResponse({
-		description: "Username does not exist or is invalid.",
-	})
-	async getBookmarksByUsername(
-		@Param("username") username: string,
-	): Promise<RoomDto[]> {
-		return await this.usersService.getBookmarksByUsername(username);
-	}
-
-	@Get(":username/taken")
+	@ApiBearerAuth()
+	@ApiSecurity("bearer")
+	@UseGuards(JwtAuthGuard)
+	@Head(":username")
 	@ApiOperation({
 		summary: "Check if a username is taken",
-		description: "Get all of the rooms that the user has bookmarked.",
+		description: "Check if the given username is already taken.",
 		operationId: "isUsernameTaken",
 	})
-	@ApiOkResponse({
-		description: "True if taken, false if not.",
+	@ApiParam({
+		name: "username",
+		description: "The username of the user to check.",
+		required: true,
+		type: String,
+		example: "johndoe",
+		allowEmptyValue: false,
 	})
-	async isUsernameTaken(@Param("username") username: string): Promise<boolean> {
-		return await this.usersService.usernameTaken(username);
+	@ApiOkResponse({
+		description:
+			"The username is taken and a GET request can be made to get the user's profile.",
+	})
+	@ApiNotFoundResponse({
+		description: "The username is not taken and can be used.",
+	})
+	async isUsernameTaken(@Param("username") username: string): Promise<void> {
+		await this.usersService.usernameTaken(username);
 	}
 
 	@ApiBearerAuth()
@@ -887,30 +875,58 @@ export class UsersController {
 		return await this.usersService.cancelFriendRequest(userInfo.id, username);
 	}
 
-	// create endpoint to get a user's recommended users
-	@ApiBearerAuth()
-	@UseGuards(JwtAuthGuard)
-	@ApiSecurity("bearer")
-	@Get("recommended/users")
-	@ApiOperation({ summary: "Get recommended users" })
+	@Get(":username/bookmarks")
+	@ApiOperation({
+		summary: "Get the authorized user's bookmarks",
+		description: "Get all of the rooms that the user has bookmarked.",
+		operationId: "getBookmarksByUsername",
+	})
 	@ApiOkResponse({
-		description: "Recommended users retrieved successfully",
-		type: UserDto,
+		description: "The user's bookmarks as an array of RoomDto.",
+		type: RoomDto,
 		isArray: true,
 	})
-	@ApiUnauthorizedResponse({
-		description: "Unauthorized",
+	@ApiBadRequestResponse({
+		description: "Username does not exist or is invalid.",
 	})
-	@ApiTags("users")
-	async getRecommendedUsers(@Request() req: Request): Promise<UserDto[]> {
-		console.log("called /users/recommended/users");
-		const userInfo: JWTPayload = this.auth.getUserInfo(req);
-		return await this.usersService.getRecommendedUsers(userInfo.id);
+	async getBookmarksByUsername(
+		@Param("username") username: string,
+	): Promise<RoomDto[]> {
+		return await this.usersService.getBookmarksByUsername(username);
+	}
+
+	@ApiBearerAuth()
+	@ApiSecurity("bearer")
+	@UseGuards(JwtAuthGuard)
+	/*
+	@ApiHeader({
+		name: "Authorization",
+		description: "Bearer token for authentication",
+	})
+	*/
+	@Get(":username/rooms/recent")
+	@ApiOperation({
+		summary: "Get a user's recent rooms",
+		description: "Get the user's most recently visited rooms.",
+		operationId: "getRecentRoomsByUsername",
+	})
+	@ApiOkResponse({
+		description: "The user's recent rooms as an array of RoomDto.",
+		type: RoomDto,
+		isArray: true,
+	})
+	@ApiBadRequestResponse({
+		description: "Username does not exist or is invalid.",
+	})
+	async getRecentRoomsByUsername(
+		@Param("username") username: string,
+	): Promise<RoomDto[]> {
+		return await this.usersService.getRecentRoomByUsername(username);
 	}
 
 	@ApiBearerAuth()
 	@UseGuards(JwtAuthGuard)
-	@Get(":username/room/current")
+	@Get(":username/rooms/current")
 	@ApiOperation({ summary: "Get a user's current room based on username" })
 	@ApiParam({
 		name: "username",
